--- a/backend/Flask/requirements.txt
+++ b/backend/Flask/requirements.txt
@@ -1,8 +1,8 @@
-Click==7.0
-Flask==1.1.1
-Flask-SQLAlchemy==2.4.1
-itsdangerous==1.1.0
-Jinja2==2.10.3
-MarkupSafe==1.1.1
-SQLAlchemy==1.3.11
-Werkzeug==0.16.0
+click==8.0.1
+Flask==2.0.1
+Flask-SQLAlchemy==2.5.1
+itsdangerous==2.0.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
+SQLAlchemy==1.4.36
+Werkzeug==2.0.1
