--- a/backend/Springboot/src/main/resources/application.properties
+++ b/backend/Springboot/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/codedecode?useSSL=false
+spring.datasource.url= jdbc:mysql://localhost:3306/codedecode?allowPublicKeyRetrieval=true&useSSL=FALSE
 spring.datasource.username= root
 spring.datasource.password= 12345678
-server.port = 8000
+server.port= 5000
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto= update
