--- a/backend/Springboot/src/main/resources/application.properties
+++ b/backend/Springboot/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url= jdbc:mysql://localhost:3306/codedecode?allowPublicKeyRetrieval=true&useSSL=FALSE
 spring.datasource.username= root
-spring.datasource.password= 12345678
+spring.datasource.password= root
 server.port= 5000
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
