--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -91,6 +91,4 @@ jobs:
         run: mvn install
     
       - name: Start testing
-        working-directory: ./backend/Springboot
-        run : mvn spring-boot:run
-        timeout-minutes: 5
+        run : pytest tests/test_springboot.py -s
