--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://aerothon-ntp.github.io/",
+  "homepage": "aerothon-ntp.github.io/boilerplate-gen/",
   "name": "boilerplate-gen",
   "version": "0.1.0",
   "private": true,
