--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -11,7 +11,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.27.2",
     "dotenv": "^8.2.0",
+    "downloadjs": "^1.4.7",
     "formik": "^2.1.4",
     "gh-pages": "^3.2.3",
     "react": "^16.13.1",
