--- a/frontend/Angular/angular.json
+++ b/frontend/Angular/angular.json
@@ -57,6 +57,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
+            "port": 3000,
             "browserTarget": "angular-crash-todolist:build"
           },
           "configurations": {
