--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -16,6 +16,7 @@
     "downloadjs": "^1.4.7",
     "formik": "^2.1.4",
     "gh-pages": "^3.2.3",
+    "markdown-to-jsx": "^7.1.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
