--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -20,6 +20,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
+    "react-lottie": "^1.2.3",
     "react-magic-dropzone": "^1.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
